--- a/package.json
+++ b/package.json
@@ -20,17 +20,38 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
-    "tailwindcss": "2.0.4"
+    "tailwindcss": "2.0.4",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.19.0",
+    "compression": "^1.7.1",
+    "express": "^4.16.2",
+    "helmet": "^3.20.0",
+    "humps": "^2.0.1",
+    "prop-types": "^15.7.2",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.5",
+    "redux-logger": "^3.0.6",
+    "styled-components": "^5.3.1",
+    "styled-normalize": "^8.0.6"
   },
   "scripts": {
-    "start": "next start",
-    "build": "next build",
-    "dev": "next dev",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run dev",
-    "build:tailwind": "tailwind build styles/index.css -o styles/tailwind.css"
+    "lint-staged": "lint-staged",
+    "build": "NODE_ENV=production next build",
+    "start": "nodemon -w server server/index.js",
+    "serve": "NODE_ENV=production node server/index.js",
+    "clean": "rimraf node_modules/.cache .next",
+    "lint": "standard --verbose | snazzy",
+    "now-start": "yarn serve",
+    "lint:fix": "standard --fix --verbose | snazzy"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "lint-staged": {
+    "*.js": [
+      "yarn lint:fix",
+      "git add"
+    ]
   },
   "browserslist": {
     "production": [
@@ -49,6 +70,22 @@
   },
   "devDependencies": {
     "autoprefixer": "10.2.5",
-    "postcss": "8.2.8"
+    "postcss": "8.2.8",
+    "@babel/core": "^7.1.0",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^25.1.0",
+    "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.0.8",
+    "nodemon": "^2.0.1",
+    "pre-commit": "^1.2.2",
+    "react-test-renderer": "^16.2.0",
+    "rimraf": "^3.0.0",
+    "snazzy": "^8.0.0",
+    "standard": "^13.0.1"
   }
 }
